# databricks-api-kafka-framework

./: README.md
.github/instructions/: copilot-adf.instructions.md
adf/: api_sources.json
dab-kafka/: .gitignore  README.md  databricks.yml  producer.py  pyproject.toml  pyproject_bak.toml
dab-kafka/.github/prompts/: copilot-instructions.md
dab-kafka/config/: nyc_taxi_metrics.yml
dab-kafka/resources/: nyc_taxi_job.yml
dab-kafka/src/engine/: gold.py  main.py  utils.py
terraform/: main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
terraform/modules/adf_api_ingestion_pipeline/: main.tf  outputs.tf  pipeline_activities.json.tpl  variables.tf
